# corpus-tools

./: .envrc  .gitignore  .gitmodules  Makefile  README.md  corpus-tools.xpr  pyproject.toml
corpus-surveys/: canonical-latinLit-genres.csv  csel-flat-review.csv  unnormalized.csv
corpus-surveys/First1KGreek/: attributes.csv  elements.csv  genres.csv  structure-map.csv  structure.csv
corpus-surveys/canonical-greekLit/: rng_errors.csv  structure-map.csv
corpus-surveys/csel-dev/: attributes.csv  elements.csv  genres.csv  structure-map.csv  structure.csv
migrated-scripts/canonical_pdlrefwk/: align_sec00009_to_phi0474.py  convert_citations.py  convert_glossae.py  convert_glossae_and_fix_bibls.py  correct_misplaced_bibls.py  epidoc_conversion.ipynb
schematron/: perseus_encoding.sch  perseus_normalized.sch
src/: genre_map.py  genres.py  pipeline.py  structure.py  tei.py  transformer.py  validate.py
src/auditors/: README.md  __init__.py  auditor.py  reference_auditor.py  rule_auditor.py  schematron_auditor.py  structure_auditor.py
src/commands/: annotate_genres.py  apply_genre_map.py  (+6 more)
tests/: conftest.py  test_annotate_genres.py  test_apply_genre_map.py  test_generate_genre_map.py  test_genres.py  test_pipeline.py  test_reference_auditor.py  test_rule_auditor.py  test_schematron_auditor.py  test_structure.py  test_structure_auditor.py  test_survey_corpus.py  test_tei_document.py  test_transformer.py  test_validate.py  test_validate_corpus.py
xslt/: add-citeStructure.xsl  fix-verse.xsl  normalize-cts.xsl  p4-to-p5-lexical.xsl  set-cts-urn.xsl  set-genre.xsl  set-schema.xsl
(+2 files in other folders)
