[project]
name = "corpus-tools"
version = "0.1.0"
description = "Tools for editing and manipulating Perseus Corpora"
authors = [
    {name = "Cliff Wulfman", email = "Clifford.Wulfman@tufts.edu"},
]
dependencies = ["lxml>=6.1.1", "lxml-stubs>=0.5.1", "saxonche>=13.0.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
corpus-tools    = "pipeline:main"
audit-refs      = "commands.audit_refs:main"
audit-structure = "commands.audit_structure:main"
audit-schema    = "commands.audit_schema:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
package-dir = "src"


[tool.pdm.scripts]
test = "pytest"
test_verbose = "pytest -v"
cov = "pytest --cov=my_python_project --cov-report=html"
cov_report = {shell = "python -m http.server -d htmlcov"}
lint = "ruff check"
typecheck = "mypy src"


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=my_python_project --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.3",
    "mypy>=1.15.0",
    "pytest-datadir>=1.8.0",
]
